Add VS Code language specific settings for C++
 - Set tab size to 2

 - Set to insert spaces instead of tabs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true
+    },
+    "[cpp]": {
+        "editor.tabSize": 2,
+        "editor.insertSpaces": true
     }
 }
