Exclude build results from VS Code explorer
Added the following directories to be excluded from VS Code's explorer view

 - Build/

 - Debug/

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "**/.svn": true,
         "**/.hg": true,
         "**/CVS": true,
-        "**/.DS_Store": true
+        "**/.DS_Store": true,
+        "**/Release/": true,
+        "**/Debug/": true
     },
     "[cpp]": {
         "editor.tabSize": 2,
